--- a/src/res/values/style.xml
+++ b/src/res/values/style.xml
@@ -6,9 +6,14 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="bigText" parent="@android:style/TextAppearance">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">#444</item>
+    </style>
+
     <style name="smallText" parent="@android:style/TextAppearance">
         <item name="android:textColor">#444</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="headerText" parent="@android:style/TextAppearance">
@@ -135,6 +140,23 @@
         <item name="android:padding">10dip</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="dialog_Translucent_NoTitle" parent="android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <!-- 边框 -->
+        <item name="android:windowIsFloating">true</item>
+        <!-- 是否浮现在activity之上 -->
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- 设置底层可见 -->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:background">#00000000</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <!-- 模糊 -->
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <!-- 设置跳转效果 -->
+        <item name="android:windowAnimationStyle">@+android:style/Animation.Activity</item>
     </style>
 
 </resources>
